--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.shadow {
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.19);
+  -webkit-box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.19);
+  -moz-box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.19);
+}
